force-app/main/default/objects/Campaign_Import_Wizard__c/Campaign_Import_Wizard__c.object-meta.xml
<CustomObject>
    <label>Campaign Import Wizard</label>
    <nameField>
        <displayFormat>CIW-{00000}</displayFormat>
        <label>Campaign Import Wizard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Import Wizard</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>