force-app/main/default/objects/Campaign_Import_Wizard__c/fields/Due_Date_for_Follow_Up_Task__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_for_Follow_Up_Task__c</fullName>
    <label># of Days for Follow Up Task</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>