force-app/main/default/objects/Campaign_Import_Wizard__c/fields/LeadSource__c.field-meta.xml
<CustomField>
    <fullName>LeadSource__c</fullName>
    <label>LeadSource</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trade Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>